[package]
name = "mp1"
version = "0.1.0"
authors = ["Patrick Gallagher <patrickj@cpgallagher.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.8.0"
float-ord = "0.2.0"
nalgebra = "0.24.0"
png = "0.16.8"
rand = "0.8.3"
